crates/monochange_integration_tests/tests/snapshots/api_classification__api_snapshot_command_is_callable_for_a_mixed_api_workspace.snap
---
source: crates/monochange_integration_tests/tests/api_classification.rs
assertion_line: 134
expression: snapshot
---
{
  "frame": "HEAD...HEAD",
  "packages": [],
  "recommendation": "none",
  "warnings": []
}
