crates/monochange_integration_tests/tests/snapshots/api_classification__change_classify_detects_a_package_deleted_from_the_candidate.snap
---
source: crates/monochange_integration_tests/tests/api_classification.rs
expression: report
---
{
  "candidate": "merge-tree:[SHA]",
  "comparisons": [
    {
      "base": "HEAD~1",
      "head": "merge-tree:[SHA]",
      "kind": "pull_request",
      "note": null,
      "status": "analyzed"
    },
    {
      "base": "[SHA]",
      "head": "HEAD",
      "kind": "source_delta",
      "note": null,
      "status": "analyzed"
    }
  ],
  "default_branch": "HEAD~1",
  "packages": [
    {
      "action": "create",
      "comparisons": [
        {
          "base": "HEAD~1",
          "head": "merge-tree:[SHA]",
          "kind": "pull_request",
          "note": null,
          "status": "analyzed"
        },
        {
          "base": "[SHA]",
          "head": "HEAD",
          "kind": "source_delta",
          "note": null,
          "status": "analyzed"
        },
        {
          "base": "retired/v1.0.0",
          "head": "merge-tree:[SHA]",
          "kind": "release",
          "note": null,
          "status": "analyzed"
        },
        {
          "base": "retired/v1.0.0",
          "head": "HEAD~1",
          "kind": "release_to_default",
          "note": null,
          "status": "analyzed"
        }
      ],
      "decision": {
        "classification_enforced": true,
        "compatibility_impact": "breaking",
        "completeness": "complete",
        "confidence": "high",
        "enforceable_minimum": "major",
        "finding_ids": [
          "cargo/public-api/public_api/removed/function/public_api",
          "monochange/package-lifecycle/package/removed/package/retired"
        ],
        "proposed_changeset_bump": "major",
        "pull_request_changes": true,
        "release_floor": "major",
        "release_impact": "breaking",
        "review_required": false
      },
      "ecosystem": "cargo",
      "existing_changesets": [],
      "findings": [
        {
          "after": null,
          "analyzer": {
            "id": "cargo/public-api",
            "version": "1"
          },
          "before": "2024",
          "bump": "patch",
          "change": "removed",
          "comparisons": [
            "pull_request",
            "release",
            "source_delta"
          ],
          "confidence": "medium",
          "coverage": {
            "completeness": "partial",
            "detection_level": "signature",
            "note": "syntax-level Rust surface; module reachability, cfg and feature matrices, trait compatibility, and downstream witnesses are not complete"
          },
          "id": "cargo/public-api/metadata/removed/manifest_field/package.edition",
          "impact": "compatible",
          "location": "Cargo.toml",
          "rule_id": "cargo/public-api/metadata/removed/manifest_field",
          "summary": "manifest_field `package.edition` removed",
          "surface": "metadata"
        },
        {
          "after": null,
          "analyzer": {
            "id": "cargo/public-api",
            "version": "1"
          },
          "before": "fn public_api () -> & 'static str",
          "bump": "major",
          "change": "removed",
          "comparisons": [
            "pull_request",
            "release",
            "source_delta"
          ],
          "confidence": "medium",
          "coverage": {
            "completeness": "partial",
            "detection_level": "signature",
            "note": "syntax-level Rust surface; module reachability, cfg and feature matrices, trait compatibility, and downstream witnesses are not complete"
          },
          "id": "cargo/public-api/public_api/removed/function/public_api",
          "impact": "breaking",
          "location": "src/lib.rs",
          "rule_id": "cargo/public-api/public_api/removed/function",
          "summary": "function `public_api` removed",
          "surface": "public_api"
        },
        {
          "after": null,
          "analyzer": {
            "id": "monochange/package-lifecycle",
            "version": "1"
          },
          "before": "cargo package `retired`",
          "bump": "major",
          "change": "removed",
          "comparisons": [
            "pull_request",
            "release",
            "source_delta"
          ],
          "confidence": "high",
          "coverage": {
            "completeness": "complete",
            "detection_level": "signature",
            "note": "package manifest presence was compared at both endpoints"
          },
          "id": "monochange/package-lifecycle/package/removed/package/retired",
          "impact": "breaking",
          "location": "Cargo.toml",
          "rule_id": "monochange/package-lifecycle/package/removed/package",
          "summary": "removed cargo package `retired`",
          "surface": "package"
        }
      ],
      "package_id": "retired",
      "package_name": "retired",
      "recommendation": "major",
      "release_owner": {
        "id": "retired",
        "kind": "package",
        "latest_release": "retired/v1.0.0"
      },
      "summary": "2 breaking finding(s) propose a major changeset",
      "warnings": []
    },
    {
      "action": "create",
      "comparisons": [
        {
          "base": "HEAD~1",
          "head": "merge-tree:[SHA]",
          "kind": "pull_request",
          "note": null,
          "status": "analyzed"
        },
        {
          "base": "[SHA]",
          "head": "HEAD",
          "kind": "source_delta",
          "note": null,
          "status": "analyzed"
        },
        {
          "base": "retired_js/v2.0.0",
          "head": "merge-tree:[SHA]",
          "kind": "release",
          "note": null,
          "status": "analyzed"
        },
        {
          "base": "retired_js/v2.0.0",
          "head": "HEAD~1",
          "kind": "release_to_default",
          "note": null,
          "status": "analyzed"
        }
      ],
      "decision": {
        "classification_enforced": true,
        "compatibility_impact": "breaking",
        "completeness": "complete",
        "confidence": "high",
        "enforceable_minimum": "major",
        "finding_ids": [
          "monochange/package-lifecycle/package/removed/package/retired-js",
          "npm/package-json/export/removed/export/.",
          "npm/package-json/public_api/removed/function/publicApi"
        ],
        "proposed_changeset_bump": "major",
        "pull_request_changes": true,
        "release_floor": "major",
        "release_impact": "breaking",
        "review_required": false
      },
      "ecosystem": "npm",
      "existing_changesets": [],
      "findings": [
        {
          "after": null,
          "analyzer": {
            "id": "monochange/package-lifecycle",
            "version": "1"
          },
          "before": "npm package `retired-js`",
          "bump": "major",
          "change": "removed",
          "comparisons": [
            "pull_request",
            "release",
            "source_delta"
          ],
          "confidence": "high",
          "coverage": {
            "completeness": "complete",
            "detection_level": "signature",
            "note": "package manifest presence was compared at both endpoints"
          },
          "id": "monochange/package-lifecycle/package/removed/package/retired-js",
          "impact": "breaking",
          "location": "package.json",
          "rule_id": "monochange/package-lifecycle/package/removed/package",
          "summary": "removed npm package `retired-js`",
          "surface": "package"
        },
        {
          "after": null,
          "analyzer": {
            "id": "npm/package-json",
            "version": "1"
          },
          "before": "./src/index.ts",
          "bump": "major",
          "change": "removed",
          "comparisons": [
            "pull_request",
            "release",
            "source_delta"
          ],
          "confidence": "medium",
          "coverage": {
            "completeness": "partial",
            "detection_level": "signature",
            "note": "package metadata and export syntax; entrypoint reachability and TypeScript assignability are not complete"
          },
          "id": "npm/package-json/export/removed/export/.",
          "impact": "breaking",
          "location": "package.json",
          "rule_id": "npm/package-json/export/removed/export",
          "summary": "export `.` removed",
          "surface": "export"
        },
        {
          "after": null,
          "analyzer": {
            "id": "npm/package-json",
            "version": "1"
          },
          "before": "module",
          "bump": "patch",
          "change": "removed",
          "comparisons": [
            "pull_request",
            "release",
            "source_delta"
          ],
          "confidence": "medium",
          "coverage": {
            "completeness": "partial",
            "detection_level": "signature",
            "note": "package metadata and export syntax; entrypoint reachability and TypeScript assignability are not complete"
          },
          "id": "npm/package-json/metadata/removed/manifest_field/type",
          "impact": "compatible",
          "location": "package.json",
          "rule_id": "npm/package-json/metadata/removed/manifest_field",
          "summary": "manifest_field `type` removed",
          "surface": "metadata"
        },
        {
          "after": null,
          "analyzer": {
            "id": "npm/package-json",
            "version": "1"
          },
          "before": "export function publicApi(): string;",
          "bump": "major",
          "change": "removed",
          "comparisons": [
            "pull_request",
            "release",
            "source_delta"
          ],
          "confidence": "medium",
          "coverage": {
            "completeness": "partial",
            "detection_level": "signature",
            "note": "package metadata and export syntax; entrypoint reachability and TypeScript assignability are not complete"
          },
          "id": "npm/package-json/public_api/removed/function/publicApi",
          "impact": "breaking",
          "location": "src/index.ts",
          "rule_id": "npm/package-json/public_api/removed/function",
          "summary": "function `publicApi` removed",
          "surface": "public_api"
        }
      ],
      "package_id": "retired_js",
      "package_name": "retired-js",
      "recommendation": "major",
      "release_owner": {
        "id": "retired_js",
        "kind": "package",
        "latest_release": "retired_js/v2.0.0"
      },
      "summary": "3 breaking finding(s) propose a major changeset",
      "warnings": []
    }
  ],
  "recommendation": "major",
  "schema_version": "[SCHEMA_VERSION]",
  "skipped": false,
  "warnings": [
    "changed path `Cargo.toml` did not match any configured package",
    "changed path `monochange.toml` did not match any configured package"
  ]
}
