crates/monochange_integration_tests/tests/snapshots/api_classification__change_classify_detects_feature_gated_rust_breaks_in_the_configured_matrix.snap
---
source: crates/monochange_integration_tests/tests/api_classification.rs
expression: snapshot
---
{
  "base_commit": "[SHA]",
  "candidate": "merge-tree:[SHA]",
  "comparisons": [
    {
      "base": "HEAD~1",
      "head": "merge-tree:[SHA]",
      "kind": "pull_request",
      "note": null,
      "status": "analyzed"
    },
    {
      "base": "[SHA]",
      "head": "HEAD",
      "kind": "source_delta",
      "note": null,
      "status": "analyzed"
    }
  ],
  "default_branch": "HEAD~1",
  "head_commit": "[SHA]",
  "packages": [
    {
      "action": "create",
      "comparisons": [
        {
          "base": "HEAD~1",
          "head": "merge-tree:[SHA]",
          "kind": "pull_request",
          "note": null,
          "status": "analyzed"
        },
        {
          "base": "[SHA]",
          "head": "HEAD",
          "kind": "source_delta",
          "note": null,
          "status": "analyzed"
        },
        {
          "base": null,
          "head": "merge-tree:[SHA]",
          "kind": "release",
          "note": "no matching release tag found for this package",
          "status": "unavailable"
        },
        {
          "base": null,
          "head": "HEAD~1",
          "kind": "release_to_default",
          "note": "no matching release tag found for this package",
          "status": "unavailable"
        }
      ],
      "decision": {
        "classification_enforced": true,
        "compatibility_impact": "breaking",
        "completeness": "complete",
        "confidence": "high",
        "enforceable_minimum": "major",
        "finding_ids": [
          "cargo/cargo-semver-checks/public_api/modified/compatibility_matrix/configured_matrix",
          "cargo/public-api/public_api/modified/trait/ExperimentalApi"
        ],
        "proposed_changeset_bump": "major",
        "pull_request_changes": true,
        "release_floor": "major",
        "review_required": false
      },
      "ecosystem": "cargo",
      "existing_changesets": [],
      "findings": [
        {
          "after": null,
          "analyzer": {
            "engine": "cargo-semver-checks",
            "id": "cargo/cargo-semver-checks",
            "version": "0.47.0"
          },
          "before": null,
          "bump": "major",
          "change": "modified",
          "comparisons": [
            "pull_request",
            "source_delta"
          ],
          "confidence": "high",
          "coverage": {
            "checks": [
              {
                "configuration": {
                  "featureMode": "default",
                  "target": "host"
                },
                "name": "default",
                "outcome": "compatible",
                "status": "checked",
                "suggested_bump": "none"
              },
              {
                "configuration": {
                  "featureMode": "none",
                  "target": "host"
                },
                "name": "no-default-features",
                "outcome": "compatible",
                "status": "checked",
                "suggested_bump": "none"
              },
              {
                "configuration": {
                  "featureMode": "none",
                  "features": "experimental",
                  "target": "host"
                },
                "diagnostics": [
                  {
                    "code": "trait_method_missing",
                    "message": "pub trait method removed or renamed",
                    "reference": "https://github.com/obi1kenobi/cargo-semver-checks/tree/v0.47.0/src/lints/trait_method_missing.ron"
                  }
                ],
                "name": "selected-experimental",
                "outcome": "breaking",
                "status": "checked",
                "suggested_bump": "major"
              },
              {
                "configuration": {
                  "featureMode": "all",
                  "target": "host"
                },
                "diagnostics": [
                  {
                    "code": "trait_method_missing",
                    "message": "pub trait method removed or renamed",
                    "reference": "https://github.com/obi1kenobi/cargo-semver-checks/tree/v0.47.0/src/lints/trait_method_missing.ron"
                  }
                ],
                "name": "all-features",
                "outcome": "breaking",
                "status": "checked",
                "suggested_bump": "major"
              },
              {
                "configuration": {
                  "featureMode": "all",
                  "target": "[host target]"
                },
                "diagnostics": [
                  {
                    "code": "trait_method_missing",
                    "message": "pub trait method removed or renamed",
                    "reference": "https://github.com/obi1kenobi/cargo-semver-checks/tree/v0.47.0/src/lints/trait_method_missing.ron"
                  }
                ],
                "name": "host-target",
                "outcome": "breaking",
                "status": "checked",
                "suggested_bump": "major"
              }
            ],
            "completeness": "complete",
            "detection_level": "semantic",
            "note": "cargo-semver-checks active lints checked 5/5 configured feature/target cells; additive Rust exports remain syntax-derived"
          },
          "id": "cargo/cargo-semver-checks/public_api/modified/compatibility_matrix/configured_matrix",
          "impact": "breaking",
          "location": "Cargo.toml",
          "rule_id": "cargo/cargo-semver-checks/public_api/modified/compatibility_matrix",
          "summary": "cargo-semver-checks found a breaking Rust API change in the configured matrix",
          "surface": "public_api"
        },
        {
          "after": "# [cfg (feature = \"experimental\")] pub trait ExperimentalApi { fn retained (& self) ; }",
          "analyzer": {
            "id": "cargo/public-api",
            "version": "1"
          },
          "before": "# [cfg (feature = \"experimental\")] pub trait ExperimentalApi { fn retained (& self) ; fn removed (& self) ; }",
          "bump": "major",
          "change": "modified",
          "comparisons": [
            "pull_request",
            "source_delta"
          ],
          "confidence": "medium",
          "coverage": {
            "completeness": "partial",
            "detection_level": "semantic",
            "note": "syntax-level Rust surface; module reachability, cfg and feature matrices, trait compatibility, and downstream witnesses are not complete"
          },
          "id": "cargo/public-api/public_api/modified/trait/ExperimentalApi",
          "impact": "breaking",
          "location": "src/lib.rs",
          "rule_id": "cargo/public-api/public_api/modified/trait",
          "summary": "trait `ExperimentalApi` modified",
          "surface": "public_api"
        }
      ],
      "package_id": "rust_api",
      "package_name": "rust-semver-matrix-fixture",
      "recommendation": "major",
      "release_owner": {
        "id": "rust_api",
        "kind": "package",
        "latest_release": null
      },
      "summary": "2 breaking finding(s) propose a major changeset",
      "warnings": []
    }
  ],
  "recommendation": "major",
  "schema_version": "[SCHEMA_VERSION]",
  "skipped": false,
  "warnings": []
}
