crates/monochange_integration_tests/tests/snapshots/api_classification__change_classify_detects_rust_typescript_and_javascript_api_impacts.snap
---
source: crates/monochange_integration_tests/tests/api_classification.rs
expression: report
---
{
  "candidate": "merge-tree:[SHA]",
  "comparisons": [
    {
      "base": "HEAD~1",
      "head": "merge-tree:[SHA]",
      "kind": "pull_request",
      "note": null,
      "status": "analyzed"
    },
    {
      "base": "[SHA]",
      "head": "HEAD",
      "kind": "source_delta",
      "note": null,
      "status": "analyzed"
    }
  ],
  "default_branch": "HEAD~1",
  "packages": [
    {
      "action": "create",
      "comparisons": [
        {
          "base": "HEAD~1",
          "head": "merge-tree:[SHA]",
          "kind": "pull_request",
          "note": null,
          "status": "analyzed"
        },
        {
          "base": "[SHA]",
          "head": "HEAD",
          "kind": "source_delta",
          "note": null,
          "status": "analyzed"
        },
        {
          "base": null,
          "head": "merge-tree:[SHA]",
          "kind": "release",
          "note": "no matching release tag found for this package",
          "status": "unavailable"
        },
        {
          "base": null,
          "head": "HEAD~1",
          "kind": "release_to_default",
          "note": "no matching release tag found for this package",
          "status": "unavailable"
        }
      ],
      "decision": {
        "classification_enforced": true,
        "compatibility_impact": "compatible",
        "completeness": "partial",
        "confidence": "medium",
        "enforceable_minimum": "none",
        "finding_ids": [
          "npm/package-json/metadata/modified/script/script.build"
        ],
        "proposed_changeset_bump": "patch",
        "pull_request_changes": true,
        "release_floor": "patch",
        "review_required": true
      },
      "ecosystem": "npm",
      "existing_changesets": [],
      "findings": [
        {
          "after": "node scripts/build.js",
          "analyzer": {
            "id": "npm/package-json",
            "version": "1"
          },
          "before": "node build.js",
          "bump": "patch",
          "change": "modified",
          "comparisons": [
            "pull_request",
            "source_delta"
          ],
          "confidence": "medium",
          "coverage": {
            "completeness": "partial",
            "detection_level": "signature",
            "note": "package metadata and export syntax; entrypoint reachability and TypeScript assignability are not complete"
          },
          "id": "npm/package-json/metadata/modified/script/script.build",
          "impact": "compatible",
          "location": "package.json",
          "rule_id": "npm/package-json/metadata/modified/script",
          "summary": "script `script.build` modified",
          "surface": "metadata"
        }
      ],
      "package_id": "js_utils",
      "package_name": "@demo/js-utils",
      "recommendation": "patch",
      "release_owner": {
        "id": "js_utils",
        "kind": "package",
        "latest_release": null
      },
      "summary": "1 compatible finding(s) propose a patch changeset",
      "warnings": []
    },
    {
      "action": "create",
      "comparisons": [
        {
          "base": "HEAD~1",
          "head": "merge-tree:[SHA]",
          "kind": "pull_request",
          "note": null,
          "status": "analyzed"
        },
        {
          "base": "[SHA]",
          "head": "HEAD",
          "kind": "source_delta",
          "note": null,
          "status": "analyzed"
        },
        {
          "base": null,
          "head": "merge-tree:[SHA]",
          "kind": "release",
          "note": "no matching release tag found for this package",
          "status": "unavailable"
        },
        {
          "base": null,
          "head": "HEAD~1",
          "kind": "release_to_default",
          "note": "no matching release tag found for this package",
          "status": "unavailable"
        }
      ],
      "decision": {
        "classification_enforced": true,
        "compatibility_impact": "breaking",
        "completeness": "partial",
        "confidence": "medium",
        "enforceable_minimum": "none",
        "finding_ids": [
          "cargo/public-api/public_api/removed/function/removed_greeting"
        ],
        "proposed_changeset_bump": "major",
        "pull_request_changes": true,
        "release_floor": "major",
        "review_required": true
      },
      "ecosystem": "cargo",
      "existing_changesets": [],
      "findings": [
        {
          "after": null,
          "analyzer": {
            "id": "cargo/public-api",
            "version": "1"
          },
          "before": "fn removed_greeting () -> & 'static str",
          "bump": "major",
          "change": "removed",
          "comparisons": [
            "pull_request",
            "source_delta"
          ],
          "confidence": "medium",
          "coverage": {
            "completeness": "partial",
            "detection_level": "signature",
            "note": "syntax-level Rust surface; module reachability, cfg and feature matrices, trait compatibility, and downstream witnesses are not complete"
          },
          "id": "cargo/public-api/public_api/removed/function/removed_greeting",
          "impact": "breaking",
          "location": "src/lib.rs",
          "rule_id": "cargo/public-api/public_api/removed/function",
          "summary": "function `removed_greeting` removed",
          "surface": "public_api"
        }
      ],
      "package_id": "rust_core",
      "package_name": "rust-core",
      "recommendation": "major",
      "release_owner": {
        "id": "rust_core",
        "kind": "package",
        "latest_release": null
      },
      "summary": "1 breaking finding(s) propose a major changeset",
      "warnings": []
    },
    {
      "action": "create",
      "comparisons": [
        {
          "base": "HEAD~1",
          "head": "merge-tree:[SHA]",
          "kind": "pull_request",
          "note": null,
          "status": "analyzed"
        },
        {
          "base": "[SHA]",
          "head": "HEAD",
          "kind": "source_delta",
          "note": null,
          "status": "analyzed"
        },
        {
          "base": null,
          "head": "merge-tree:[SHA]",
          "kind": "release",
          "note": "no matching release tag found for this package",
          "status": "unavailable"
        },
        {
          "base": null,
          "head": "HEAD~1",
          "kind": "release_to_default",
          "note": "no matching release tag found for this package",
          "status": "unavailable"
        }
      ],
      "decision": {
        "classification_enforced": true,
        "compatibility_impact": "additive",
        "completeness": "partial",
        "confidence": "medium",
        "enforceable_minimum": "none",
        "finding_ids": [
          "npm/package-json/public_api/added/interface/AdminUser"
        ],
        "proposed_changeset_bump": "minor",
        "pull_request_changes": true,
        "release_floor": "minor",
        "review_required": true
      },
      "ecosystem": "npm",
      "existing_changesets": [],
      "findings": [
        {
          "after": "export interface AdminUser extends User { role: string; }",
          "analyzer": {
            "id": "npm/package-json",
            "version": "1"
          },
          "before": null,
          "bump": "minor",
          "change": "added",
          "comparisons": [
            "pull_request",
            "source_delta"
          ],
          "confidence": "medium",
          "coverage": {
            "completeness": "partial",
            "detection_level": "signature",
            "note": "package metadata and export syntax; entrypoint reachability and TypeScript assignability are not complete"
          },
          "id": "npm/package-json/public_api/added/interface/AdminUser",
          "impact": "additive",
          "location": "src/index.ts",
          "rule_id": "npm/package-json/public_api/added/interface",
          "summary": "interface `AdminUser` added",
          "surface": "public_api"
        }
      ],
      "package_id": "ts_client",
      "package_name": "@demo/ts-client",
      "recommendation": "minor",
      "release_owner": {
        "id": "ts_client",
        "kind": "package",
        "latest_release": null
      },
      "summary": "1 additive finding(s) propose a minor changeset",
      "warnings": []
    }
  ],
  "recommendation": "major",
  "schema_version": "[SCHEMA_VERSION]",
  "skipped": false,
  "warnings": []
}
